# NaCl-RISC-V

./: .gitignore  CODEOWNERS  LICENSE  README.md  README.txt
Parsing/: Cargo.toml
Parsing/src/: main.rs
Poly1305_onetimeauth/Initial implementation/: .onetime_auth.c.swm  .onetime_auth.c.swn  Makefile  (+13 more)
RStudio/: Analysis branch prediction correlation.Rmd  Analysis branch prediction correlation.nb.html
TestFramework/: Cargo.toml  benchmark.c
TestFramework/src/: cli.rs  functions_and_testcases.rs  main.rs  make.rs  reader.rs  traits.rs  utils.rs
TestFramework/src/generators/: mod.rs
TestFramework/src/generators/crypto_box/: generator.rs  mod.rs  shared.rs
TestFramework/src/generators/crypto_secretbox/: generator.rs
TestFramework/src/generators/crypto_stream/: generator.rs
TestFramework/src/generators/poly1305/: generator.rs
TestFramework/src/generators/scalarmult/: generator.rs
TestFramework/src/karatsuba/: generator.rs  reader.rs
TestFramework/src/mulmod/: generator.rs  mod.rs  reader.rs
TestFramework/src/onetime_authloop/: generator.rs  reader.rs
TestFramework/src/poly1305/: generator.rs  mod.rs  poly1305_generator.rs  poly1305_reader.rs  reader.rs
TestFramework/src/scalarmult/: generator.rs  mod.rs  reader.rs
TestFramework/src/securemul/: generator.rs  mod.rs  reader.rs  securemul_generator.rs  securemul_reader.rs
TestFramework/src/test_results_reader/: mod.rs  poly1305.rs
TestFramework/src/testcase_generators/: mod.rs  poly1305.rs
random tests/: Makefile  program.elf  program.hex  program.map  securemul.S  test.c  test.o.objdump
(+737 files in other folders)
