[package]
name = "TestFramework"
version = "0.1.0"
authors = ["stefanberg96 <bergshm@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
hex = "0.4.0"
rand = "0.7.2"
sodiumoxide = "0.2.5"
simple-error = "0.2.1"
env_logger = "0.7.1"
log = "0.4.8"