[package]
name = "TestFramework"
version = "0.3.0"
authors = ["stefanberg96 <bergshm@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
hex = "0.4.0"
rand = "0.7.2"
sodiumoxide = "0.2.5"
simple-error = "0.2.1"
env_logger = "0.7.1"
log = "0.4.8"
num-bigint = "0.2"
num-traits = "*"
chrono = "0.4"
flexi_logger = "0.15.1"
indicatif = "0.14.0"
structopt = "0.3.11"
microsalt = "0.2.21"
index-fixed = "0.3.0"